--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Josefin Sans', sans-serif;
 }
+
+
+
+/* colors */
+/* beige- #F5F5DC */
+/* little bit teal - #e6f4ff */
+/* cream - #FFFDD0 */
