--- a/src/components/sales/cart.css
+++ b/src/components/sales/cart.css
@@ -23,6 +23,6 @@
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #04aa6d;
-  color: white;
+  background-color: #fafafa;
+  color: black;
 }
